[package]
name = "goldcrab"
version = "0.1.0"
authors = ["Rodrigo Leite <rodrigo@leite.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusb = "0.5"
dialoguer = "0.5"
byteorder = "1.3.2"
num_enum = "0.4.2"
sysinfo = "0.10.4"
env_logger = "0.7.1"
log = "0.4.8"